--- a/nova/values.yaml
+++ b/nova/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 
 image:
-  repository: novaadc/nova-client:latest
+  repository: novaadc/nova-client-aj:1.0.1
   tag: 0.1.0
   pullPolicy: IfNotPresent
 
@@ -11,30 +11,19 @@ serviceAccount:
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
   
-node_id: <Refer to README for instructions to get value>
-node_key: <Refer to README for instructions to get value>
+nova_auto_conf: 'your_adc_auto_join_key_here'
+nova_auto_conf_host: 'nova.snapt.net'
 host: 'poll.nova-adc.com'
 
 deployment_port_map: # Port mappings for the kubernetes deployment
-  #port 1080 is used for Nova traffic
   port80:
     containerPort: 80
     protocol: TCP
-  port443:
-    containerPort: 443
-    protocol: TCP
+
 
 service_port_map: # Port mappings for the kubernetes service
-  #port 1080 is used for Nova traffic
+# Only include the ports you are actively using to manage your traffic
   port80:  # Map object
     name: 'port80' # Name of the service port
     port: 80 # Maps to the port value of the service
     targetPort: 80 # Maps to the targetPort value of the service
-  port443:
-    name: 'port443'
-    port: 443
-    targetPort: 443
-  #port_20000:
-  #  name: 'port_20000'
-  #  port: 20000
-  #  targetPort: 443
